tdf#149650 avoid potential recursion with SdrPage content hierarchy

Change-Id: I27e064eeedfb45a2fe96892f1d31da94b9976c50
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/136303
Tested-by: Jenkins
Reviewed-by: Armin Le Grand <Armin.Le.Grand@me.com>